<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="hello_world">Hello World</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="label_info">How to play</string>
    <string name="play_instructions">Tap the buttons to play</string>
    <string name="red_text">RED</string>
    <string name="green_button">GREEN</string>
    <string name="blue_button">BLUE</string>
</resources>